--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+        <h3>v 1.1</h3>
         <h1 id="num">Cookies: 0</h1 >
         <h3 id="cp">CPS: 0</h3 >
         <img  id="cok" class="img position-absolute start-50 translate-middle" src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fimg00.deviantart.net%2F8765%2Fi%2F2018%2F151%2F1%2F9%2Fchocolate_chip_cookie_png_by_bunny_with_camera-dcd1uhh.png&f=1&nofb=1" height="200px" alt="">
@@ -18,19 +19,19 @@
           <div id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a onclick="buySlaves()" class="btn text-light btn-lg btn-dark nav-link m-3">Buy cookie slave: 50C</a>
+                <a onclick="buySlaves()" id="bsl" class="btn text-light btn-lg btn-dark nav-link m-3">Buy cookie slave: 50C</a>
               </li>
               <li class="nav-item">
-                <a onclick="buySummoners()" class="btn text-light btn-lg btn-dark nav-link m-3">Buy cookie summoner: 500C</a>
+                <a onclick="buySummoners()" id="bsu" class="btn text-light btn-lg btn-dark nav-link m-3">Buy cookie summoner: 500C</a>
               </li>
               <li class="nav-item">
-                <a onclick="buyRobots()" class="btn text-light btn-lg btn-dark nav-link m-3">Buy cookie robot: 5000C</a>
+                <a onclick="buyRobots()" id="bro" class="btn text-light btn-lg btn-dark nav-link m-3">Buy cookie robot: 5000C</a>
               </li>
               <li class="nav-item">
-                <a onclick="buyFactories()" class="btn text-light btn-lg btn-dark nav-link m-3">Buy cookie factory: 50000C</a>
+                <a onclick="buyFactories()" id="bfa" class="btn text-light btn-lg btn-dark nav-link m-3">Buy cookie factory: 50000C</a>
               </li>
               <li class="nav-item">
-                <a onclick="buyVolcanoes()" class="btn text-light btn-lg btn-dark nav-link m-3">Buy cookie volcano: 500000C</a>
+                <a onclick="buyVolcanoes()" id="bvo" class="btn text-light btn-lg btn-dark nav-link m-3">Buy cookie volcano: 500000C</a>
               </li>
             </ul>
           </div>
