fix + hand baked cookies

--- a/index.html
+++ b/index.html
@@ -46,13 +46,14 @@
       </nav>
       <div>
           <ul id="pl" class="pl my-2">
-              <h2>Purchases</h2> 
+              <h2>Stats</h2> 
               <li>Cookie slaves: 0</li>
               <li>Cookie summoners: 0</li>
               <li>Cookie robots: 0</li>
               <li>Cookie factories: 0</li>
               <li>Cookie volcanoes: 0</li>
               <li>Cookie gods: 0</li>
+              <li>Cookies hand baked: 0</li>
           </ul>
       </div>
       <audio id="pop" src="pop.wav"></audio>
